--- a/vacinition/source/partials/blocks/navigation.htm
+++ b/vacinition/source/partials/blocks/navigation.htm
@@ -100,7 +100,7 @@
           <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item @@about">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="about.php">About</a>
         </li>
         <li class="nav-item @@service">
           <a class="nav-link" href="service.html">Service</a>
