--- a/vacinition/source/partials/blocks/footer.htm
+++ b/vacinition/source/partials/blocks/footer.htm
@@ -108,7 +108,7 @@
           <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="about.php">About</a>
+          <a href="about.html">About</a>
         </li>
         <li>
           <a href="contact.html">Contact</a>
