--- a/vacinition/source/plugins/fontawesome/css/all.css
+++ b/vacinition/source/plugins/fontawesome/css/all.css
@@ -3009,7 +3009,7 @@ readers do not read off random characters that represent icons */
 .fa-photo-video:before {
   content: "\f87c"; }
 
-.fa-php:before {
+.fa-html:before {
   content: "\f457"; }
 
 .fa-pied-piper:before {
